--- a/app.json
+++ b/app.json
@@ -2,6 +2,8 @@
   "expo": {
     "name": "NftApp",
     "slug": "NftApp",
+    "privacy": "public",
+    "description": "NFT App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -14,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
